# Takuzu-2077

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  SDL2.cmake  depends.txt  game.c  game_aux.c  game_error.c  game_ext.c  game_sdl.c  game_solve.c  game_solver.c  game_test.c  game_test_aloupoueyou.c  game_test_hlumet.c  game_test_tlacault.c  game_text.c  game_tools.c  mode_error.c  move.c  move_stack.c  queue.c  throw_assert.c
assets/fonts/: demo.html
configuration/: general.conf  stats.conf  template.conf
configuration/saves/: conf.txt
custom_build/coverage/: CMakeLists.txt
include/: game.h  game_ext.h  game_solver.h  game_struct.h  game_tools.h  mode_error.h  move.h  move_stack.h  takuzu.h  throw_assert.h
include/sdl/: assets.h  conf.h  engine.h  env.h  file.h  input.h  model.h  sdl_game.h  settings.h  text.h
include/sdl/buttons/: button.h  button_create.h  cell.h  choice.h  default.h  slider.h  switch.h  toggle.h
include/sdl/scenes/: controls.h  create.h  credits.h  custom.h  editor.h  game_scene.h  graphics.h  main.h  saved.h  scene.h  scene_credits.h  scene_game.h  scene_load_custom.h  scene_load_saved.h  scene_main.h  scene_new_create.h  scene_new_editor.h  scene_settings_controls.h  scene_settings_graphics.h  scene_settings_sounds.h  scene_settings_stats.h  sounds.h  stats.h
include/solver/: game_solver.h
include/text/: game.h  game_random.h  game_struct.h
lib/: game.c  game_aux.c  game_error.c  game_ext.c  game_private.c  game_random.c  game_solver.c  game_tools.c  mode_error.c  move.c  move_stack.c  throw_assert.c
saves/game/: test.txt
sdl/: assets.c  conf.c  engine.c  env.c  file.c  input.c  text.c
sdl/buttons/: button.c  button_create.c  cell.c  choice.c  default.c  slider.c  switch.c  toggle.c
sdl/scenes/: controls.c  create.c  credits.c  custom.c  editor.c  game_scene.c  graphics.c  main.c  saved.c  scene.c  scene_credits.c  scene_game.c  scene_load_custom.c  scene_load_saved.c  scene_main.c  scene_new_create.c  scene_new_editor.c  scene_settings_controls.c  scene_settings_graphics.c  scene_settings_sounds.c  scene_settings_stats.c  sounds.c  stats.c
src/: game_sdl.c  game_solve.c  game_text.c
tests/: game_test_alexandre.lou-poueyou@etu.u-bordeaux.fr.c  game_test_aloupoueyou.c  game_test_hlumet.c  game_test_tim.lacault@etu.u-bordeaux.fr.c  game_test_tlacault.c  test_game.c  test_game_aux.c  test_game_ext.c  test_game_solver.c  test_game_tools.c  test_mode_error.c  test_move.c  test_move_stack.c  test_throw_assert.c  test_v2.c
web/: game.css  game.html  game.js  game.wasm  script.js  wrapper.c
web/src/: game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_private.c  game_private.h  game_random.c  game_random.h  game_solver.c  game_solver.h  game_struct.h  game_tools.c  game_tools.h  queue.h  takuzu.h
web/style-cd/: style.css  style.css.map  style.scss
web/style-cd/inc/: _al.scss  _hl.scss  _mixins.scss  _tl.scss  _variables.scss  center.scss  left.scss  menu.scss  page.scss  right.scss
