# ---- Project Settings ---- #
cmake_minimum_required(VERSION 2.6)
project(game_text C)
include(CTest)
enable_testing()

# ---- Pre Processor Intructions ---- #
include_directories(include)

# ---- Library Generation ---- #
file(GLOB_RECURSE game_lib_src lib/*.c)
add_library(game ${game_lib_src})

# ---- Compilation Rules ---- #
set(CMAKE_C_FLAGS "-std=c99 -Wall -Wextra -Werror -g --coverage")
file(GLOB_RECURSE game_text_src src/*.c)
link_directories(${CMAKE_SOURCE_DIR})
link_libraries(game)

# ---- Binary Generation ---- #
add_executable(game_text ${game_text_src})
add_custom_command(TARGET game_text POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/lib/ ${CMAKE_SOURCE_DIR})

# ---- Tests Generation ---- #
add_executable(test_game                    tests/test_game.c)
add_test(test_game_new                      ./test_game game_new)
add_test(test_game_new_empty                ./test_game game_new_empty)
add_test(test_game_copy                     ./test_game game_copy)
add_test(test_game_equal                    ./test_game game_equal)
add_test(test_game_delete                   ./test_game game_delete)
add_test(test_game_is_empty                 ./test_game game_is_empty)
add_test(test_game_restart                  ./test_game game_restart)
add_test(test_game_set_square               ./test_game game_set_square)
add_test(test_game_get_square               ./test_game game_get_square)
add_test(test_game_get_number               ./test_game game_get_number)
add_test(test_game_get_next_square          ./test_game game_get_next_square)
add_test(test_game_get_next_number          ./test_game game_get_next_number)
add_test(test_game_is_immutable             ./test_game game_is_immutable)
add_test(test_game_has_error                ./test_game game_has_error)
add_test(test_game_check_move               ./test_game game_check_move)
add_test(test_game_play_move                ./test_game game_play_move)
add_test(test_game_is_over                  ./test_game game_is_over)

add_executable(test_game_aux                tests/test_game_aux.c)
add_test(test_game_default                  ./test_game_aux game_default)
add_test(test_game_default_solution         ./test_game_aux game_default_solution)
add_test(test_game_print                    ./test_game_aux game_print)

add_executable(test_game_ext                tests/test_game_ext.c)
add_test(test_game_new_ext                  ./test_game_ext game_new_ext)
add_test(test_game_new_empty_ext            ./test_game_ext game_new_empty_ext)
add_test(test_game_undo                     ./test_game_ext game_undo)
add_test(test_game_redo                     ./test_game_ext game_redo)
add_test(test_game_nb_rows                  ./test_game_ext game_nb_rows)
add_test(test_game_nb_cols                  ./test_game_ext game_nb_cols)
add_test(test_game_is_unique                ./test_game_ext game_is_unique)
add_test(test_game_is_wrapping              ./test_game_ext game_is_wrapping)

add_executable(test_mode_error              tests/test_mode_error.c)
add_test(test_is_unique_array               ./test_mode_error is_unique_array)
add_test(test_is_array_same                 ./test_mode_error is_array_same)
add_test(test_is_consecutive_grid           ./test_mode_error is_consecutive_grid )
add_test(test_is_consecutive                ./test_mode_error is_consecutive)
add_test(test_get_number                    ./test_mode_error get_number)
add_test(test_rotate_array                  ./test_mode_error rotate_array)
add_test(test_get_col                       ./test_mode_error get_col)
add_test(test_get_row                       ./test_mode_error get_row)

add_executable(test_move                    tests/test_move.c)
add_test(test_move_create                   ./test_move move_create)
add_test(test_move_delete                   ./test_move move_delete)
add_test(test_move_row                      ./test_move move_row)
add_test(test_move_col                      ./test_move move_col)
add_test(test_move_s                        ./test_move move_s)
add_test(test_move_p                        ./test_move move_p)
add_test(test_move_print                    ./test_move move_print)

add_executable(test_move_stack              tests/test_move_stack.c)
add_test(test_ms_create                     ./test_move_stack ms_create)
add_test(test_ms_delete                     ./test_move_stack ms_delete)
add_test(test_ms_double_capacity            ./test_move_stack ms_double_capacity)
add_test(test_ms_top                        ./test_move_stack ms_top)
add_test(test_ms_push                       ./test_move_stack ms_push)
add_test(test_ms_pop                        ./test_move_stack ms_pop)
add_test(test_ms_clear                      ./test_move_stack ms_clear)
add_test(test_ms_top_row                    ./test_move_stack ms_top_row)
add_test(test_ms_top_col                    ./test_move_stack ms_top_col)
add_test(test_ms_top_s                      ./test_move_stack ms_top_s)
add_test(test_ms_top_p                      ./test_move_stack ms_top_p)
add_test(test_ms_is_empty                   ./test_move_stack ms_is_empty)
add_test(test_ms_is_full                    ./test_move_stack ms_is_full)
add_test(test_ms_print                      ./test_move_stack ms_print)

add_executable(test_throw_assert            tests/test_throw_assert.c)
add_test(test_throw_error                   ./test_throw_assert throw_error)
add_test(test_game_test                     ./test_throw_assert game_test)
add_test(test_cgame_test                    ./test_throw_assert cgame_test)
add_test(test_pointer_test                  ./test_throw_assert pointer_test)
